Add missing CLD3 languages to `kAcceptLanguageList`

These were languages that we can detect with CLD3 (and offer translations for),
but wouldn't appear in the Chrome Settings page, and therefore couldn't be
removed from the Accept-Language list.

The list of missing languages was obtained by calculating the set difference
of `kLanguageNames` (from task_context_params.cc) and `kAcceptLanguageList`
(from l10n_util.cc):

https://paste.googleplex.com/6446173711761408
(apologies for external contributors who can't visit the link)

Languages that end in '-Latn' (e.g. 'zh-Latn') are not supported by Translate
and were not added to `kAcceptLanguageList`.

Bug: 807317
Change-Id: I83386fb5cb7ecbb3aae04aa1d1ca87ad0f0df34c
Reviewed-on: https://chromium-review.googlesource.com/1107878
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Jungshik Shin <jshin@chromium.org>
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568996}
Former-commit-id: 38d8d6d9985356a1d6e1d8fd8519bae84ce81871